# shuiwu

./: .env.example  README.md  pyproject.toml
Shuiwu_backend/: .gitignore  CLAUDE.md  fetch_certificates.py  main.py  main_production.py  migrate_db.py  readme.md  requirements.txt  run_migration.py  sync.sh  test_signature.py  全景报告-对外接口.docx
Shuiwu_backend/app/: main.py
Shuiwu_backend/config/: points_config.json
Shuiwu_backend/docs/: ADMIN_API_REFERENCE.md  DISTRIBUTION_README.md  FEEDBACK_API.md  admin-api-docs.md  admin-remove-documents-api.md  admin-remove-documents-test-report.md  admin-system.md  chashuibao-integration-checklist.md  chashuibao-integration.md  enhanced-pdf-setup.md  import-files-api.md  member-package-api.md  member-permission-system.md  order-system-design.md  permission-decorators-guide.md  tax_accountant_api.md  tax_scope_guardrails.json  tax_scope_guardrails.md  user-center-api.md  user-center-postman-guide.md  wechat-miniprogram-integration.md  wechat-pay-integration-summary.md  全景报告-对外接口.docx  发票穿透对外接口文档-对外文档.docx  工商引擎改版-后端对接说明.md  工商引擎改版-管理系统前端对接说明.md  支付模块API接口文档.md  智能税务系统接口分析报告-简化版.md  智能税务系统接口分析报告.md  经营风险报告文档-对外文档.docx
Shuiwu_backend/scripts/: add_reasoning_and_merge.py  add_test_package.py  expand_dataset.py  (+21 more)
Shuiwu_frontend/: CLAUDE.md  app.js  app.json  app.wxss  package-lock.json  project.config.json  project.private.config.json
docs/: agent_architecture_plan.md  api_redirect_plan.md  migration_roadmap.md
scripts/: run_dev.ps1
tests/: test_api_contracts.py  test_bulk_intent.py  test_data_v2.md  test_query_rewriter.py
(+476 files in other folders)
